Stop using Java 17 preview features