@@ -18,8 +18,9 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <start-class>com.getpcpanel.App</start-class>
+        <main.class>main.Window</main.class>
         <javafx.version>17.0.2</javafx.version>
+        <javafx.plugin.version>0.0.8</javafx.plugin.version>
         <jna.version>5.11.0</jna.version>
         <asm.version>9.3</asm.version>
     </properties>
@@ -153,20 +154,23 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.0</version>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <compilerArgs>
-                            --enable-preview
-                        </compilerArgs>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.plugin.version}</version>
+                <configuration>
+                    <mainClass>${main.class}</mainClass>
+                    <options>
+                        <option>--add-modules=javafx.controls,javafx.fxml,javafx.web</option>
+                        <option>--add-exports javafx.web/com.sun.javafx.webkit=ALL-UNNAMED</option>
+                        <option>--add-exports javafx.web/com.sun.webkit=ALL-UNNAMED</option>
+                        <option>--add-exports javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED</option>
+                        <option>--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                    </options>
+                    <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
